--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -25,26 +25,31 @@
     <div class="cont-header-2">
         <img src="/img/TERPO-NEGRO.svg" alt="Logo Terpo" class="logo-header">
         <nav class="nav">
-            <ul class="lista-nav unfolded">
-                <li>QUIENES SOMOS</li>
-                <li class="servicios">
-                    <p id="p-servicios">SERVICIOS</p>
-                    <img src="/img/icons/MENU-UP.svg" alt="Drop Down" class="drop-down-m drop-servicios">
-                    <ul class="d-servicios folded">
-                        <li class="li-dropdown">Agrimensura Urbana</li>
-                        <li class="li-dropdown">Agrimensura Rural</li>
-                        <li class="li-dropdown">Topografía en Tierra</li>
-                        <li class="li-dropdown">Topografía en Agua</li>
-                    </ul>
-                </li>
-                <li>EQUIPAMIENTO</li>
-                <li>EXPERIENCIA</li>
-                <li>CONTÁCTENOS</li>
-            </ul>
-            </div>
-            <span class="menu-drop">
-                <img src="/img/icons/MENU-UP.svg" alt="Drop Down" class="drop-down-m">
-            </span>
+                <ul class="lista-nav unfolded">
+                    <li>QUIENES SOMOS</li>
+                    <li class="servicios">
+                        <p id="p-servicios">SERVICIOS</p>
+                        <img src="/img/icons/MENU-UP.svg" alt="Drop Down" class="drop-down-m drop-servicios">
+                        <ul class="d-servicios folded">
+                            <li class="li-dropdown">Agrimensura Urbana</li>
+                            <li class="li-dropdown">Agrimensura Rural</li>
+                            <li class="li-dropdown">Topografía en Tierra</li>
+                            <li class="li-dropdown">Topografía en Agua</li>
+                        </ul>
+                    </li>
+                    <li>EQUIPAMIENTO</li>
+                    <li>EXPERIENCIA</li>
+                    <li>CONTÁCTENOS</li>
+                </ul>
+                <ul class="d-servicios folded hide-desktop">
+                    <li class="li-dropdown">Agrimensura Urbana</li>
+                    <li class="li-dropdown">Agrimensura Rural</li>
+                    <li class="li-dropdown">Topografía en Tierra</li>
+                    <li class="li-dropdown">Topografía en Agua</li>
+                </ul>
+                <span class="menu-drop">
+                    <img src="/img/icons/MENU-UP.svg" alt="Drop Down" class="drop-down-m">
+                </span>
         </nav>
     </div>
 </header>
