--- a/public/css/home.css
+++ b/public/css/home.css
@@ -51,12 +51,12 @@
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     padding: 8px 12px;
     position: absolute;
     top: 10px;
-    width: 100%;
+    height: 100%;
     text-align: center;
     font-size: 1rem;
 }
@@ -69,7 +69,13 @@
 }
 
 .titulo-slide {
-    margin-bottom: 40%;
+    color: rgb(10, 9, 9);
+    margin-bottom: 3em;
+}
+
+.subtitulo-slide {
+    margin-bottom: 5px;
+    margin-top: 28%;
 }
 
 .active {
@@ -108,8 +114,39 @@
     align-self: flex-start;
     border: 1px outset #EE1116;
     padding: 1px;
+    margin-top: 0;
 }
 
 .info-slide {
     display: none;
+}
+
+@media screen and (min-width: 620px) {
+    .showSlider img {
+        top: 20%;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+
+    /*.showSlider {
+        height: 40vh;
+    }*/
+
+    .showSlider img {
+        width: 30%;
+        top: 10%;
+    }
+
+    .contentBook {
+        margin-left: 8rem;
+    }
+
+    .novedad-slide, .titulo-slide {
+        font-size: 1.5rem;
+    }
+
+    .subtitulo-slide {
+        margin-top: 18%;
+    }
 }
