--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -47,9 +47,9 @@
                     <li class="li-dropdown">Topografía en Tierra</li>
                     <li class="li-dropdown">Topografía en Agua</li>
                 </ul>
-                <span class="menu-drop">
+                <div class="menu-drop">
                     <img src="/img/icons/MENU-UP.svg" alt="Drop Down" class="drop-down-m">
-                </span>
+                </div>
         </nav>
     </div>
 </header>
